Fixed layout issues

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -57,6 +57,7 @@ h4 a:hover {
     background-color: rgba(248, 240, 169, .9);
 }
 
+/* ---
 .samples img, .portfolio img {
     opacity: .9;
     -webkit-transition: all 250ms linear;
@@ -72,6 +73,9 @@ h4 a:hover {
     -webkit-transition: all 250ms linear;
     transition: all 250ms linear;
 }
+
+
+----*/
 
 img.grayscale {
     -webkit-filter: grayscale(1);
@@ -95,6 +99,9 @@ img.grayscale:hover {
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'gs\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#gs");
 
     filter: none;
+
+    -webkit-transition: all 250ms linear;
+    transition: all 250ms linear;
 }
 
 .about {
